2009-03-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* X11Structs:
	* X11Clipboard.cs: Move internal ClipboardStruct from X11Structs to
	its own file, since it is adding some functionality and thus is not a
	simple struct as before.
	* XplatUIX11.cs: Add support to store different formats that could
	have been specified by the user when puting data in the Clipboard -
	this is important when more than one format is supported (such plain
	text and rtf text). Update in the needed places, as well as simplify
	the code.
	Fixes #489625.

2009-03-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* XplatUIX11.cs: When handling the SelectionRequest event, use
	SelectionRequestEvent instead of SelectionEvent, so we get the right
	data for the app asking for clipboard data. Set the member of
	SelectioneEvent.property to indicate the place where we are storing
	the information as well - this is specially important for gnome/kde
	apps using the TARGETS atom to ask for the supported permission before
	actually asking for a specific format.
	Fixes #489393.

2009-03-28  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridViewCell.cs: We don't support drawing all types of cell borders, 
	so fallback and at least draw something instead of nothing.

2009-03-27  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: If the column header isn't visible allow resizing 
	using the cell column border. Also be sure to reset the cursor properly.
	[Fixes bug #489929]

2009-03-26   Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStrip.cs: When disposing, iterate over the items in reverse
	order, since disposing the items modifies the collection.
	* ToolStripItem.cs: Remove from the owner when disposing.
	Fixes #485769.

2009-03-26  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: Add an implementation for UpdateRowHeightInfo. No 
	longer throws a NotImplementedException.
	  Based on a patch by Tom Hindle <tom_hindle@sil.org>
	[Fixes bug #488319]
